--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "d3-interpolate": "^2.0.1",
     "react": "16.9.0",
     "react-native": "0.61.5"
   },
