--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "d3-interpolate": "^2.0.1",
     "d3-interpolate-path": "^2.2.1",
+    "flubber": "^0.4.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-svg": "^12.1.1"
